Changes required in 1st review PR2 done

--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@
   }
 
   .btn {
-    height: 46px;
+    height: 48px;
     width: 89px;
     background-color: #7d73fc;
     color: white;
@@ -240,6 +240,9 @@
     font-size: 12px;
     border: none;
     font-family: 'Roboto', sans-serif;
+    line-height: 24px;
+    font-weight: 500px;
+    letter-spacing: 3%;
   }
 
   .lang-list li {
@@ -261,14 +264,14 @@
     top: 1440px;
     background-color: #edecff;
     filter: blur(20px);
-    transform: rotate(-36.51 deg);
+    transform: rotate(-36.48deg);
   }
 
   .proj-2 .shining-star {
     position: absolute;
     width: 70.28px;
     height: 261.6px;
-    left: 327.27px;
+    left: 300px;
     top: 2300px;
     background: #edecff;
     filter: blur(23px);
@@ -287,12 +290,29 @@
 
   .proj-4 .shining-star {
     position: absolute;
-    width: 101.29px;
-    height: 377.04px;
-    left: 398.22px;
-    top: 3800px;
+    width: 55.29px;
+    height: 200.04px;
+    left: 288px;
+    top: 3700px;
     background: #edecff;
     filter: blur(21px);
     transform: matrix(-0.26, 0.97, 0.97, 0.26, 0, 0);
+  }
+
+  .btn:hover {
+    cursor: pointer;
+    background-color: #7d73fc;
+  }
+
+  .btn:active {
+    background-color: #5e42d7;
+  }
+
+  .btn:visited {
+    background-color: #5e42d7;
+  }
+
+  .btn:disabled {
+    background-color: #2a2b33;
   }
 }
