--- a/styles.css
+++ b/styles.css
@@ -1,399 +1,692 @@
-@media screen and (min-width: 320px) {
-  body {
-    background-color: #191765;
-  }
+body {
+  background-color: #191765;
+}
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  color: white;
+}
+
+welcom-name {
+  color: white;
+  text-align: center;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+}
+
+header a {
+  line-height: 16px;
+  padding-top: 10px;
+  font-size: 18px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+header nav {
+  width: 33.33px;
+}
+
+nav i:hover {
+  cursor: pointer;
+  color: #acb7c3;
+}
+
+nav > ul > li {
+  display: none;
+}
+
+section {
+  width: 100%;
+}
+
+.developer-title {
+  margin: 20px;
+  white-space: nowrap;
+}
+
+.developer-title h1 {
+  margin: 1px;
+  padding: 20px 0;
+  font-size: 48px;
+  font-style: bold;
+  letter-spacing: 0.37px;
+  line-height: 72px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-weight: 700;
+  color: #9490ff;
+}
+
+.software-developer {
+  margin: 1px;
+  font-size: 30px;
+  line-height: 44px;
+  vertical-align: center;
+  margin-bottom: 50px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-weight: 500;
+  color: white;
+}
+
+.banner-text-pera {
+  color: #c8c8d4;
+  font-style: regular;
+  font-size: 20px;
+  line-height: 28px;
+  vertical-align: top;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-weight: 400;
+}
+
+.icon {
+  text-align: center;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+ul a i {
+  padding: 10px;
+  align-items: center;
+  font-size: 25px;
+  color: #fff;
+}
+
+.shining-star-1 {
+  margin-left: -30px;
+  padding-bottom: 30px;
+  background-image: url(bg/ea.png);
+  background-repeat: no-repeat;
+  background-position: 0% -10%;
+  background-size: 100px;
+}
+
+.shining-star-11 {
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.shining-star-2 {
+  background-image: url(bg/eb.png);
+  background-repeat: no-repeat;
+  background-position: 100% 5%;
+  background-size: 100px;
+  margin-right: -30px;
+}
+
+.Technology-knowledge {
+  border-top: 1px solid #646369;
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 10px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #646369;
+}
+
+.Technology-knowledge h4 {
+  padding-bottom: 20%;
+  text-align: left;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+.Technology-knowledge li {
+  font-weight: 400;
+  padding: 6px 0;
+  text-align: left;
+  font-family: 'Roboto', sans-serif;
+  width: 50%;
+  line-height: 24px;
+  font-size: 15px;
+}
+
+.heading {
+  color: #9490ff;
+}
+
+.headinglist {
+  color: #edecff;
+}
+
+.icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 0;
+}
+
+.lang-list {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  gap: 0;
+}
+
+.nav-arrow {
+  display: flex;
+  justify-content: center;
+}
+
+.arrow {
+  margin: 6px;
+  width: 28px;
+  height: 20px;
+  filter: opacity(1) drop-shadow(0 0 0 #a2a3ae) saturate(300%) contrast(0%) blur(0);
+}
+
+.navarrow {
+  display: none;
+}
+
+.recent-work-heading {
+  font-size: 20px;
+  line-height: 32px;
+  color: #a2a3ae;
+}
+
+.works {
+  text-decoration: none;
+}
+
+.works > p {
+  font-size: 20px;
+  line-height: 32px;
+  color: #a2a3ae;
+}
+
+.works:hover {
+  cursor: pointer;
+  text-decoration: 2px underline var(--secondary-heading-color);
+}
+
+.header-language {
+  padding: 0 30px 60px 30px;
+}
+
+.recent-work-heading {
+  font-size: 32px;
+  margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+  color: #9490ff;
+  width: 220px;
+  text-transform: uppercase;
+}
+
+.grid-container {
+  background-image: url(bg/ec.png), url(bg/ed.png), url(bg/ee.png), url(bg/ef.png);
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+  background-position: left top 7%, right top 36%, left top 63%, right bottom 8%;
+  background-size: 250px;
+  display: grid;
+  grid-template-rows: auto;
+  padding: 0 30px;
+  gap: 10px;
+  width: 100%;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.grid-item p {
+  color: #dcdce8;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 10px;
+}
+
+.project-title {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 44px;
+  margin: 50px 0;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+}
+
+.btn {
+  height: 48px;
+  width: 89px;
+  background-color: #7d73fc;
+  color: white;
+  padding: 12px;
+  align-items: center;
+  font-size: 12px;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  line-height: 24px;
+  font-weight: 500px;
+  letter-spacing: 3%;
+}
+
+.lang-list li {
+  padding: 10px 20px 0 0;
+  padding-bottom: 20px;
+  border-right: 1px solid #555;
+  height: 20px;
+  color: white;
+  list-style-type: none;
+  justify-content: space-between;
+  font-family: 'Roboto', sans-serif;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #7d73fc;
+}
+
+.btn:active {
+  background-color: #5e42d7;
+}
+
+.btn:visited {
+  background-color: #5e42d7;
+}
+
+.btn:disabled {
+  background-color: #2a2b33;
+}
+
+.contact-form .flex-container-column,
+.flex .flex-container-column,
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-form {
+  margin-top: 75px;
+}
+
+.desktop-form {
+  display: none;
+}
+
+.mobile-form {
+  padding: 20px;
+}
+
+#desktop {
+  display: none;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+  gap: 24px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top: 1px solid #3a3837;
+  align-items: center;
+  padding-top: 15px;
+  margin-bottom: 30px;
+}
+
+.contact-form div h2 {
+  margin-bottom: 20px;
+  font-size: 32px;
+  line-height: 44px;
+  color: #9390ff;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.contact-form div p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #f5f5ff;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-weight: 400;
+  margin: 20px;
+}
+
+#mobile-contactus {
+  display: block;
+}
+
+#desktop-chat {
+  display: none;
+}
+
+.input-cls {
+  width: 100%;
+  padding: 16px;
+  color: #191765;
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.input-cls > textarea {
+  height: auto;
+}
+
+.submit-btn {
+  margin-top: 16px;
+  margin-bottom: 80px;
+  font-family: 'Roboto', sans-serif;
+}
+
+footer .text-hover:hover {
+  text-decoration: 2px underline var(--primary-heading-color);
+}
+
+.footer-email > a {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ebebff;
+  text-decoration: none;
+}
+
+/* Desktop version width > 768px */
+@media (min-width: 768px) {
   * {
     margin: 0;
     padding: 0;
   }
 
-  header {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    color: white;
+  html,
+  body {
+    width: 100%;
   }
 
-  header a {
-    line-height: 16px;
-    padding-top: 10px;
-    font-size: 18px;
-    letter-spacing: 0.03em;
-    text-decoration: none;
+  nav .fa-bars {
+    display: none;
+  }
+
+  .menu-lists {
+    margin: 15px 0;
+    list-style-type: none;
+    font-size: 20px;
+    line-height: 20px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-around;
+    margin-right: 22px;
+  }
+
+  .menu-lists li {
+    padding: 10px 20px 0 0;
+  }
+
+  nav > ul {
+    display: flex;
+  }
+
+  nav > ul > li {
+    display: inline-block;
+    margin-right: 20%;
+    margin-top: -20px;
     color: white;
     font-family: 'Roboto', sans-serif;
   }
 
-  header nav {
-    width: 33.33px;
+  header {
+    /* width: 100%; */
+    padding: 0 190px 0 100px;
+    display: flex;
+    justify-content: space-between;
   }
 
-  nav i:hover {
-    cursor: pointer;
-    color: #acb7c3;
+  main {
+    width: 100%;
+    margin: 0 auto;
   }
 
   section {
-    margin: 10px 30px 0 30px;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
   }
 
-  .developer-title {
-    margin: 20px;
-    white-space: nowrap;
+  .shining-star-1 {
+    width: 100%;
+    background-image: url(bg/da.png);
+    background-repeat: no-repeat;
+    background-size: 200px;
+    background-position: 0% 0%;
   }
 
-  .developer-title h1 {
-    margin: 1px;
-    padding: 10px 0;
-    font-size: 48px;
-    font-style: bold;
-    letter-spacing: 0.37px;
-    line-height: 72px;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-weight: 700;
-    color: #9490ff;
-  }
-
-  .software-developer {
-    margin: 1px;
-    font-size: 30px;
-    line-height: 44px;
-    vertical-align: center;
-    margin-bottom: 30px;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-weight: 500;
-    color: white;
+  .shining-star-2 {
+    background-image: url(bg/db.png);
+    background-repeat: no-repeat;
+    background-position: 0 100;
+    background-size: 200px;
+    margin: 0 auto;
   }
 
   .banner-text-pera {
-    color: #c8c8d4;
-    font-style: regular;
-    font-size: 20px;
-    line-height: 28px;
-    vertical-align: top;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-weight: 400;
-  }
-
-  hr {
-    border: 1px solid #646369;
-    margin: 30px 0;
-  }
-
-  .icon {
-    text-align: center;
-  }
-
-  ul li {
-    display: inline-block;
-    align-content: center;
-  }
-
-  ul a i {
-    padding: 10px;
-    align-items: center;
-    font-size: 25px;
-    color: #fff;
-  }
-
-  .shining-star {
-    position: absolute;
-    width: 160px;
-    height: 160px;
-    border-radius: 50%;
-    background: #edecff;
-    filter: blur(20px);
-    left: -106px;
-  }
-
-  .Knowledge {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 10px;
-  }
-
-  .Knowledge .shining-star {
-    position: absolute;
-    width: 68px;
-    height: 68px;
-    left: 339px;
-    top: 510px;
-  }
-
-  .Knowledge div {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
   }
 
-  .Knowledge h4 {
-    padding-bottom: 0;
-    text-align: left;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-  }
-
-  .Knowledge ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-align: left;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
+  .Technology-knowledge,
+  .tech {
+    width: 50%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    font-family: 'Roboto', sans-serif;
+    justify-content: space-between;
   }
 
-  .Knowledge li {
-    line-height: 24px;
-    font-size: 15px;
-    font-weight: 400;
-    padding: 6px 0;
-    text-align: left;
-    float: left;
-    font-family: 'Roboto', sans-serif;
-  }
-
-  .heading {
-    color: #9490ff;
-  }
-
-  .headinglist {
-    color: #edecff;
-  }
-
-  .nav-arrow {
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-  }
-
-  .arrow {
-    margin: 6px;
-    width: 28px;
-    height: 20px;
-    filter: opacity(1) drop-shadow(0 0 0 #a2a3ae) saturate(300%) contrast(0%) blur(0);
-  }
-
-  .works {
-    font-size: 20px;
-    line-height: 32px;
-    color: #a2a3ae;
-    text-decoration: none;
-  }
-
-  .recent-work-heading {
-    font-size: 32px;
-    width: 180px;
-    margin-top: 20px;
-    font-family: 'Roboto', sans-serif;
-    color: #9490ff;
+  .Technology-knowledge li {
+    width: 30%;
   }
 
   .grid-container {
+    background-image: url(bg/ec.png), url(bg/dd.png), url(bg/de.png), url(bg/ef.png);
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+    background-position: left top 7%, right top 36%, left top 63%, right bottom 15%;
+    width: 100%;
     display: grid;
-    grid-template-rows: auto;
-    margin: auto;
-    gap: 10px;
-    width: 327px;
+    grid-template-columns: 100%;
+    padding-top: 20px;
+  }
+
+  .one {
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  .class-arrow {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 70px;
+  }
+
+  .navarrow {
+    display: flex;
+  }
+
+  .proj-1 {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .proj-2 {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .proj-3 {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .proj-4 {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  recent-work {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .grid-row-item .project-image {
+    width: 500px;
+    height: 298px;
   }
 
   .grid-item {
     display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 50px;
   }
 
-  .grid-item p {
-    color: #dcdce8;
-    font-size: 20px;
-    line-height: 28px;
-    font-weight: 400;
-    font-family: 'Roboto', sans-serif;
-    padding-bottom: 20px;
+  #my-recent-work {
+    width: 70%;
+    margin: 0 auto;
   }
 
-  .project-title {
+  .project-1 {
+    border-top: 1px solid #646369;
+    padding-top: 20px;
+  }
+
+  .lang-list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .recent-work > h3 {
     font-size: 32px;
-    font-weight: 500;
-    line-height: 44px;
-    margin: 50px 0;
-    font-family: 'Roboto', sans-serif;
-    color: white;
+    text-transform: none;
+    width: 100%;
   }
 
-  .btn {
-    height: 48px;
-    width: 89px;
-    background-color: #7d73fc;
-    color: white;
-    padding: 12px;
-    align-items: center;
-    font-size: 12px;
-    border: none;
-    font-family: 'Roboto', sans-serif;
-    line-height: 24px;
-    font-weight: 500px;
-    letter-spacing: 3%;
+  .proj-2 {
+    flex-direction: row-reverse;
   }
 
-  .lang-list li {
-    padding: 10px 20px 0 0;
-    padding-bottom: 20px;
-    border-right: 1px solid #555;
-    height: 20px;
-    color: white;
-    list-style-type: none;
-    display: inline-flex;
-    font-family: 'Roboto', sans-serif;
+  .proj-4 {
+    flex-direction: row-reverse;
   }
 
-  .proj-1 .shining-star {
-    position: absolute;
-    width: 39.61px;
-    height: 482.57px;
-    left: -12.04px;
-    top: 1440px;
-    background-color: #edecff;
-    filter: blur(20px);
-    transform: rotate(-36.48deg);
+  .grid-row-item h4 {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
-  .proj-2 .shining-star {
-    position: absolute;
-    width: 70.28px;
-    height: 261.6px;
-    left: 300px;
-    top: 2300px;
-    background: #edecff;
-    filter: blur(23px);
-    transform: matrix(-0.84, -0.54, -0.54, 0.84, 0, 0);
+  .grid-row-item p {
+    line-height: normal;
+    font-size: 19px;
   }
 
-  .proj-3 .shining-star {
-    position: absolute;
-    width: 308px;
-    height: 155px;
-    left: -93px;
-    top: 3250px;
-    background: rgba(237, 236, 255, 0.3);
-    filter: blur(21px);
+  #mobile {
+    display: none;
   }
 
-  .proj-4 .shining-star {
-    position: absolute;
-    width: 101.29px;
-    height: 377.04px;
-    right: -100px;
-    top: 3600px;
-    background: #edecff;
-    filter: blur(21px);
-    transform: matrix(-0.26, 0.97, 0.97, 0.26, 0, 0);
-  }
-
-  .btn:hover {
-    cursor: pointer;
-    background-color: #7d73fc;
-  }
-
-  .btn:active {
-    background-color: #5e42d7;
-  }
-
-  .btn:visited {
-    background-color: #5e42d7;
-  }
-
-  .btn:disabled {
-    background-color: #2a2b33;
-  }
-
-  .contact-form .flex-container-column,
-  .flex .flex-container-column,
-  .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .contact-form {
-    margin-top: 75px;
-  }
-
-  .contact-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 40px;
-    gap: 24px;
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-top: 1px solid #3a3837;
-    align-items: center;
-    padding-top: 15px;
-    margin-bottom: 30px;
-  }
-
-  .contact-form div h2 {
-    margin-bottom: 20px;
-    font-size: 32px;
-    line-height: 44px;
-    color: #9390ff;
-    font-weight: 500;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
+  #desktop {
+    display: block;
   }
 
   .contact-form div p {
-    font-size: 16px;
-    line-height: 24px;
-    color: #f5f5ff;
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-weight: 400;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
   }
 
-  .input-cls {
+  .contact-form {
+    width: 70%;
+    margin: 50px auto 20px auto;
+  }
+
+  #mobile-contactus {
+    display: none;
+  }
+
+  #contact #desktop-chat {
+    display: block;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer-email > a {
+    margin-bottom: 10px;
+  }
+
+  .first-last-name {
+    display: flex;
     width: 100%;
-    padding: 16px;
+    justify-content: space-between;
+  }
+
+  .email {
+    display: flex;
+    width: 100%;
+  }
+
+  .messagebox {
+    display: flex;
+    width: 100%;
+  }
+
+  .desktop-input {
+    width: 100%;
+    padding: 12px;
     color: #191765;
     font-size: 15px;
     font-family: 'Roboto', sans-serif;
   }
 
-  .input-cls > textarea {
+  #Last-name {
+    width: 288px;
+  }
+
+  #First-name {
+    width: 288px;
+  }
+
+  .desktop-input > textarea {
     height: auto;
   }
 
-  .submit-btn {
-    margin-top: 16px;
-    margin-bottom: 80px;
-    font-family: 'Roboto', sans-serif;
-  }
-
-  footer .text-hover:hover {
-    text-decoration: 2px underline var(--primary-heading-color);
-  }
-
-  .footer-email > a {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    text-align: center;
-    color: #ebebff;
-    text-decoration: none;
+  .desktop-form {
+    display: flex;
+    width: 100%;
   }
 }
