--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,17 @@ ul a i {
   display: flex;
   justify-content: center;
   gap: 0;
+
+}
+
+.icon-list li {
+  color: white;
+  transition-property: transform;
+  transition-duration: 1s;
+}
+
+.icon-list li:hover {
+  transform: scale(1.7);
 }
 
 .lang-list {
@@ -276,6 +287,8 @@ ul a i {
   line-height: 24px;
   font-weight: 500px;
   letter-spacing: 3%;
+  transition-property: background-color;
+  transition-duration: 1s;
 }
 
 .lang-list li {
@@ -291,7 +304,7 @@ ul a i {
 
 .btn:hover {
   cursor: pointer;
-  background-color: #7d73fc;
+  background-color: #6f66f3;
 }
 
 .btn:active {
